<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.ForgotPasswordScreen">

<!--    <include-->
<!--        layout="@layout/layout_toolbar" />-->

    <EditText
        android:id="@+id/edittext_old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:autofillHints="password"
        android:hint="@string/hint_edittext_old_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:autofillHints="password"
        android:hint="@string/hint_edittext_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edittext_new_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:autofillHints="password"
        android:hint="@string/hint_edittext_confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:text="@string/button_change_password"
        android:textStyle="bold" />

</LinearLayout>
